--- a/src/R/pcgrr/inst/templates/predispose/summary.Rmd
+++ b/src/R/pcgrr/inst/templates/predispose/summary.Rmd
@@ -10,7 +10,7 @@ nonempty_tiers <- list()
 for(type in c('tier1','tier2','tier3A','tier3B')){
   empty_tiers[[type]] <- F    
   nonempty_tiers[[type]] <- F
-  if(NROW(pcg_report[['summary']][[type]]) == 0){
+  if(NROW(cps_report[['summary']][[type]]) == 0){
     empty_tiers[[type]] <- T
   }else{
     nonempty_tiers[[type]] <- T
@@ -24,8 +24,8 @@ for(type in c('tier1','tier2','tier3A','tier3B')){
 
 i <- 1
 cat('<ul>\n')
-while(i <= NROW(pcg_report[['summary']][['tier1']])){
-  cat(paste0('<li><span style="color:#9E0142; font-size:13pt">',pcg_report[['summary']][['tier1']][i,]$CLINVAR_PHENOTYPE,'</span> - ',pcg_report[['summary']][['tier1']][i,]$VARIANTS),'</li>\n')
+while(i <= NROW(cps_report[['summary']][['tier1']])){
+  cat(paste0('<li><span style="color:#9E0142; font-size:13pt">',cps_report[['summary']][['tier1']][i,]$CLINVAR_PHENOTYPE,'</span> - ',cps_report[['summary']][['tier1']][i,]$VARIANTS),'</li>\n')
   i <- i + 1
 }
 cat('</ul>\n')
@@ -44,8 +44,8 @@ cat('\n')
 
 i <- 1
 cat('<ul>\n')
-while(i <= NROW(pcg_report[['summary']][['tier2']])){
-  cat(paste0('<li><span style="color:#D53E4F; font-size:13pt">',pcg_report[['summary']][['tier2']][i,]$CLINVAR_PHENOTYPE,'</span> - ',pcg_report[['summary']][['tier2']][i,]$VARIANTS),'</li>\n')
+while(i <= NROW(cps_report[['summary']][['tier2']])){
+  cat(paste0('<li><span style="color:#D53E4F; font-size:13pt">',cps_report[['summary']][['tier2']][i,]$CLINVAR_PHENOTYPE,'</span> - ',cps_report[['summary']][['tier2']][i,]$VARIANTS),'</li>\n')
   i <- i + 1
 }
 cat('</ul>\n')
@@ -65,8 +65,8 @@ cat('\n')
 
 i <- 1
 cat('<ul>\n')
-while(i <= NROW(pcg_report[['summary']][['tier3A']])){
-  cat(paste0('<li><span style="color:#F46D43; font-size:13pt">',pcg_report[['summary']][['tier3A']][i,]$CLINVAR_PHENOTYPE,'</span> - ',pcg_report[['summary']][['tier3A']][i,]$VARIANTS),'</li>\n')
+while(i <= NROW(cps_report[['summary']][['tier3A']])){
+  cat(paste0('<li><span style="color:#F46D43; font-size:13pt">',cps_report[['summary']][['tier3A']][i,]$CLINVAR_PHENOTYPE,'</span> - ',cps_report[['summary']][['tier3A']][i,]$VARIANTS),'</li>\n')
   i <- i + 1
 }
 cat('</ul>\n')
@@ -86,8 +86,8 @@ cat('\n')
 
 i <- 1
 cat('<ul>\n')
-while(i <= NROW(pcg_report[['summary']][['tier3B']])){
-  cat(paste0('<li><span style="color:#F46D43; font-size:13pt">',pcg_report[['summary']][['tier3B']][i,]$MUTATION,'</span></li>\n'))
+while(i <= NROW(cps_report[['summary']][['tier3B']])){
+  cat(paste0('<li><span style="color:#F46D43; font-size:13pt">',cps_report[['summary']][['tier3B']][i,]$MUTATION,'</span></li>\n'))
   i <- i + 1
 }
 cat('</ul>\n')
