--- a/src/R/pcgrr/inst/templates/predispose/tier2_predispose.Rmd
+++ b/src/R/pcgrr/inst/templates/predispose/tier2_predispose.Rmd
@@ -10,19 +10,19 @@ missing_tier2_items <- list()
 for(type in c('cancer_phenotype','noncancer_phenotype')){
   show_tier2_filters[[type]] <- F
   missing_tier2_items[[type]] <- T
-  if(NROW(pcg_report[['snv_indel']][['variant_display']][['tier2']][[type]]) > 0){
+  if(NROW(cps_report[['snv_indel']][['variant_display']][['tier2']][[type]]) > 0){
     show_tier2_filters[[type]] <- T
     missing_tier2_items[[type]] <- F
   }
 }
 
-tot_variants_lp_clinvar <- NROW(pcg_report[['snv_indel']][['variant_display']][['tier2']][['cancer_phenotype']]) + NROW(pcg_report[['snv_indel']][['variant_display']][['tier2']][['noncancer_phenotype']])
+tot_variants_lp_clinvar <- NROW(cps_report[['snv_indel']][['variant_display']][['tier2']][['cancer_phenotype']]) + NROW(cps_report[['snv_indel']][['variant_display']][['tier2']][['noncancer_phenotype']])
 
-tag_tgp <- pcg_report[['pcgr_config']][['popgen']][['vcftag_tgp']]
-desc_tgp <- pcg_report[['pcgr_config']][['popgen']][['popdesc_tgp']]
+tag_tgp <- cps_report[['cpsr_config']][['popgen']][['vcftag_tgp']]
+desc_tgp <- cps_report[['cpsr_config']][['popgen']][['popdesc_tgp']]
 formula_tgp <- as.formula(paste0("~",rlang::sym(tag_tgp)))
-tag_gnomad <- pcg_report[['pcgr_config']][['popgen']][['vcftag_gnomad']]
-desc_gnomad <- pcg_report[['pcgr_config']][['popgen']][['popdesc_gnomad']]
+tag_gnomad <- cps_report[['cpsr_config']][['popgen']][['vcftag_gnomad']]
+desc_gnomad <- cps_report[['cpsr_config']][['popgen']][['popdesc_gnomad']]
 formula_gnomad <- as.formula(paste0("~",rlang::sym(tag_gnomad)))
 
 ```
@@ -37,12 +37,12 @@ library(summarywidget)
 library(crosstalk)
 
 
-cat('A total of <b>',NROW(pcg_report[['snv_indel']][['variant_display']][['tier2']][['cancer_phenotype']]), '</b> unique, germline variant(s) are found as likely pathogenic and associated with cancer phenotypes in ClinVar for the selected predisposition genes:')
+cat('A total of <b>',NROW(cps_report[['snv_indel']][['variant_display']][['tier2']][['cancer_phenotype']]), '</b> unique, germline variant(s) are found as likely pathogenic and associated with cancer phenotypes in ClinVar for the selected predisposition genes:')
 cat('\n')
 htmltools::br()
 htmltools::br()
 
-variants_tier2_cancer <- crosstalk::SharedData$new(pcg_report[['snv_indel']][['variant_display']][['tier2']][['cancer_phenotype']])
+variants_tier2_cancer <- crosstalk::SharedData$new(cps_report[['snv_indel']][['variant_display']][['tier2']][['cancer_phenotype']])
 crosstalk::bscols(
   list(
     crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_tier2_cancer, ~CONSEQUENCE),
@@ -83,12 +83,12 @@ library(summarywidget)
 library(crosstalk)
 
 
-cat('A total of <b>',NROW(pcg_report[['snv_indel']][['variant_display']][['tier2']][['noncancer_phenotype']]), '</b> unique, germline variant(s) are found as pathogenic and associated with undefined/non-cancer phenotypes in ClinVar for the selected predisposition genes:')
+cat('A total of <b>',NROW(cps_report[['snv_indel']][['variant_display']][['tier2']][['noncancer_phenotype']]), '</b> unique, germline variant(s) are found as pathogenic and associated with undefined/non-cancer phenotypes in ClinVar for the selected predisposition genes:')
 cat('\n')
 htmltools::br()
 htmltools::br()
 
-variants_tier2_noncancer <- crosstalk::SharedData$new(pcg_report[['snv_indel']][['variant_display']][['tier2']][['noncancer_phenotype']])
+variants_tier2_noncancer <- crosstalk::SharedData$new(cps_report[['snv_indel']][['variant_display']][['tier2']][['noncancer_phenotype']])
 crosstalk::bscols(
   list(
     crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_tier2_noncancer, ~CONSEQUENCE),
