--- a/src/R/pcgrr/inst/templates/predispose/tier3_predispose.Rmd
+++ b/src/R/pcgrr/inst/templates/predispose/tier3_predispose.Rmd
@@ -2,35 +2,36 @@
 
 <br>
 
-The unclassified, coding variants have all been assigned a composite <i>pathogenicity score</i> (coined <b>PATHSCORE</b> in the tables below) according to the prioritization scheme outlined in [CharGer](https://github.com/ding-lab/charger/) ([Huang et al., 2018](https://www.ncbi.nlm.nih.gov/pubmed/29625052)), as well as [Maxwell et al.,2016](https://www.ncbi.nlm.nih.gov/pubmed/27153395). Specifially, a cancer-specific adoption of previously established <b>ACMG</b> criteria for variant classification has been implemented ([Richards et al., 2015](https://www.ncbi.nlm.nih.gov/pubmed/25741868), [Amendola et al., 2016](https://www.ncbi.nlm.nih.gov/pubmed/27181684)). The following ACMG evidence items indicate support for pathogenic/benign variants, and have been implemented as follows (points in parenthesis indicate how they contribute to overall PATHSCORE):  
+The unclassified, coding variants have all been assigned a composite <i>pathogenicity score</i> (coined <b>PATHSCORE</b> in the tables below) according to the prioritization scheme outlined in [CharGer](https://github.com/ding-lab/charger/) ([Huang et al., Cell, 2018](https://www.ncbi.nlm.nih.gov/pubmed/29625052)), as well as [Maxwell et al., Am J Hum Genet, 2016](https://www.ncbi.nlm.nih.gov/pubmed/27153395). Specifially, a cancer-specific adoption of previously established <b>ACMG</b> criteria for variant classification has been implemented ([Richards et al., 2015](https://www.ncbi.nlm.nih.gov/pubmed/25741868), [Amendola et al., Am J Hum Genet, 2016](https://www.ncbi.nlm.nih.gov/pubmed/27181684)). The following ACMG evidence items indicate support for pathogenic/benign variants, and have been implemented as follows (points in parenthesis indicate how they contribute to overall <b>PATHSCORE</b>):  
 
 * PVS1 (<b>8</b>) - null variant (nonsense, frameshift, canonical ±1 or 2 splice sites - indicated by [VEP's LofTee plugin](https://github.com/konradjk/loftee)) in a gene where LoF is a known mechanism of disease (dominant mode of inheritance (MoI))
 * PS1 (<b>7</b>) - Same amino acid change as a previously established pathogenic variant ([ClinVar](https://www.ncbi.nlm.nih.gov/clinvar/)) regardless of nucleotide change
 * PSC1 (<b>4</b>) - null variant (nonsense, frameshift, canonical ±1 or 2 splice sites - indicated by [VEP's LofTee plugin](https://github.com/konradjk/loftee)) in a gene where LoF is a known mechanism of disease (recessive MoI)
 * PMC1 (<b>2</b>) - null variant (nonsense, frameshift, canonical ±1 or 2 splice sites - indicated by [VEP's LofTee plugin](https://github.com/konradjk/loftee)) in a gene where LoF is NOT the known mechanism of disease
-* PM1 (<b>2</b>) - Located in a somatic mutational hotspot (cancerhotspots.org) 
-* PM2 (<b>2</b>) - Absence/extremely low frequency (MAF < 0.0005 in [1000 Genomes Project](http://www.internationalgenome.org/)/[gnomAD](http://gnomad.broadinstitute.org/) global population)
-* PM4 (<b>2</b>) - Protein length changes due to inframe indels or stoploss variants in non-repetitive regions (as identified by RepeatMasker) of known susceptibility gene (dominant MoI)
+* PM1 (<b>2</b>) - Located in a somatic mutational hotspot ([cancerhotspots.org](https://www.cancerhotspots.org)) 
+* PM2 (<b>2</b>) - Absence/extremely low minor allele frequency (MAF < 0.0005 in [1000 Genomes Project](http://www.internationalgenome.org/)/[gnomAD](http://gnomad.broadinstitute.org/) global population)
+* PM4 (<b>2</b>) - Protein length changes due to inframe indels or stoploss variants in non-repetitive regions (as identified by [RepeatMasker](http://www.repeatmasker.org/)) of known susceptibility gene (dominant MoI)
 * PM5 (<b>2</b>) - Novel missense change at an amino acid residue where a different missense change determined to be pathogenic has been seen before  ([ClinVar](https://www.ncbi.nlm.nih.gov/clinvar/))
 * PP2 (<b>1</b>) - Missense variant in a gene that has a relatively low rate of benign missense variation and where missense variants are a common mechanism of disease
+    * Rate of benign missense variants in susceptibility gene is < 20%
+    * Rate of non-truncating pathogenic missense variants in susceptibility gene is > 50%
 * PP3 (<b>1</b>) - Multiple lines of computational evidence support a deleterious effect on the gene or gene product (conservation, evolutionary, splicing impact, etc., from [dbNSFP](https://sites.google.com/site/jpopgen/dbNSFP))
-* PPC1 (<b>1</b>) - Protein length changes due to inframe indels or stoploss variants in non-repetitive regions (as identified by RepeatMasker) of known susceptibility gene (recessive MoI)
-* BP4 (<b>-1</b>) - Multiple lines (>1) of in silico evidence of none deleterious effect.
+* PPC1 (<b>1</b>) - Protein length changes due to inframe indels or stoploss variants in non-repetitive regions (as identified by [RepeatMasker](http://www.repeatmasker.org/)) of known susceptibility gene (recessive MoI)
+* BP4 (<b>-1</b>) - Multiple lines of computational evidence support a benign effect on the gene or gene product (conservation, evolutionary, splicing impact, etc., from [dbNSFP](https://sites.google.com/site/jpopgen/dbNSFP))
 * BMC1 (<b>-2</b>) - Peptide change is at the same location of a known benign change ([ClinVar](https://www.ncbi.nlm.nih.gov/clinvar/))
 * BSC1 (<b>-6</b>) - Peptide change is known to be benign ([ClinVar](https://www.ncbi.nlm.nih.gov/clinvar/))
 * BA1 (<b>-8</b>) - High allele frequency in the general population (MAF > 0.05 in [1000 Genomes Project](http://www.internationalgenome.org/)/[gnomAD](http://gnomad.broadinstitute.org/) global population)
-    * Exception for susceptibility genes HPE and SERPINA1, requiring MAF > 0.25
+    * Exception for [homeostatic iron regulator (HFE)](https://www.ncbi.nlm.nih.gov/gene/3077) and [SERPINA1](https://www.ncbi.nlm.nih.gov/gene/5265), requiring MAF > 0.25
 
 
-The composite PATHSCORE is finally assigned one of four different <b>PATHRANK</b> levels:
+The composite <b>PATHSCORE</b> is finally assigned one of four different <b>PATHRANK</b> levels:
 
-* <i>HIGH</i>: PATHSCORE > 8
-* <i>MODERATE</i>: PATHSCORE <= 8 AND PATHSCORE > 4
-* <i>LOW</i>: PATHSCORE <= 4 AND PATHSCORE >= 0
-* <i>BENIGN</i>: PATHSCORE < 0
+* <i><b><span style="color:#F46D43">HIGH</span></b></i>: PATHSCORE > 8
+* <i><b><span style="color:#FDAE61">MODERATE</span></b></i>: PATHSCORE <= 8 AND PATHSCORE > 4
+* <i><b><span style="color:#FEE08B">LOW</span></b></i>: PATHSCORE <= 4 AND PATHSCORE >= 0
+* <i><b><span style="color:#78C679">BENIGN</span></b></i>: PATHSCORE < 0
 
-The contribution of evidence items pr. variant can be seen in the <b>PATHDOC</b> variable.
-
+The contribution of ACMG evidence items pr. variant can be seen in the <b>PATHDOC</b> variable.
 
 <br>
 
@@ -171,7 +172,7 @@ crosstalk::bscols(
 cat('<i>No variants found.</i>',sep='\n')
 cat('\n')
 ```
-<br><br>
+<br><br><br>
 
 
 #### B: Other unclassified protein-coding variants
