--- a/src/R/pcgrr/inst/templates/predispose/predisposition_class1_5.Rmd
+++ b/src/R/pcgrr/inst/templates/predispose/predisposition_class1_5.Rmd
@@ -1,22 +1,27 @@
 
 
+
+
+
 ```{r prepare_classified_variant_data, echo=F, results='asis'}
 
 
 show_class_filters <- list()
 missing_class_items <- list()
-tot_variants_p_clinvar <- list()
-tot_variants_p_other <- list()
+tot_variants <- list()
 for(c in c('class1','class2','class3','class4','class5')){
-  show_class_filters[[c]] <- F
-  missing_class_items[[c]] <- T
-  tot_variants_p_clinvar[[c]] <- 0
-  tot_variants_p_other[[c]] <- 0
-  if(NROW(cps_report[['content']][['snv_indel']][['variant_display']][[c]]) > 0){
-    show_class_filters[[c]] <- T
-    missing_class_items[[c]] <- T
-    tot_variants_p_clinvar[[c]] <- NROW(cps_report[['content']][['snv_indel']][['variant_display']][[c]] %>% dplyr::filter(SOURCE == "ClinVar"))
-    tot_variants_p_other[[c]] <- NROW(cps_report[['content']][['snv_indel']][['variant_display']][[c]] %>% dplyr::filter(SOURCE == "Other"))
+  show_class_filters[[c]] <- list()
+  missing_class_items[[c]] <- list()
+  tot_variants[[c]] <- list()
+  for(m in c('Other','ClinVar')){
+    tot_variants[[c]][[m]] <- 0
+    show_class_filters[[c]][[m]] <- F
+    missing_class_items[[c]][[m]] <- T
+    tot_variants[[c]][[m]] <- NROW(cps_report[['content']][['snv_indel']][['variant_display']][[c]] %>% dplyr::filter(SOURCE == m))
+    if(tot_variants[[c]][[m]] > 0){
+      show_class_filters[[c]][[m]] <- T
+      missing_class_items[[c]][[m]] <- F
+    }
   }
 }
 
@@ -28,33 +33,39 @@ formula_gnomad <- as.formula(paste0("~",rlang::sym(tag_gnomad)))
 
 ```
 
-### <span style="color:#9E0142">Class 5 - <b>Pathogenic</b> variants</span>
+### <span style="color:#9E0142">Class 5 - <b>Pathogenic</b> variants</span> {.tabset .tabset-pills .nav-justified}
 
 <br>
 
-*  A total of n = __`r tot_variants_p_clinvar[['class5']]`__ variants are registered with a <i>Pathogenic</i> clinical significance in ClinVar.
-*  A total of n = __`r tot_variants_p_other[['class5']]`__ <i><b>Other</b></i> variants (i.e. not registered in ClinVar) are classified with a <i>Pathogenic</i> significance by CPSR (ACMG criteria - based on population frequency and variant effect).
+*  A total of n = __`r tot_variants[['class5']][['ClinVar']]`__ variants are registered with a <i>Pathogenic</i> clinical significance in ClinVar.
+*  A total of n = __`r tot_variants[['class5']][['Other']]`__ <i><b>non-ClinVar</b></i> variants (i.e. not registered in ClinVar) are classified with a <i>Pathogenic</i> significance by CPSR (ACMG criteria - based on population frequency and variant effect).
 
 <br>
 
+#### ClinVar
 
-```{r class5_cpsr, echo=F, results = 'asis', eval = show_class_filters[['class5']]}
+```{r class5_cpsr_clinvar, echo=F, results = 'asis', eval = show_class_filters[['class5']][['ClinVar']]}
 library(summarywidget)
 library(crosstalk)
 
 cat('\n')
 htmltools::br()
 
-variants_class5 <- crosstalk::SharedData$new(cps_report[['content']][['snv_indel']][['variant_display']][['class5']])
+
+variants_class5_clinvar <- dplyr::filter(cps_report[['content']][['snv_indel']][['variant_display']][['class5']], SOURCE == 'ClinVar') %>%
+  dplyr::select(-c(CPSR_CLASSIFICATION,CPSR_CLASSIFICATION_SCORE,CPSR_CLASSIFICATION_DOC,CPSR_CLASSIFICATION_CODE))
+variants_class5_1 <- crosstalk::SharedData$new(variants_class5_clinvar)
 crosstalk::bscols(
   list(
-    crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_class5, ~CONSEQUENCE),
-    crosstalk::filter_checkbox("GENOTYPE", "Genotype", variants_class5, ~GENOTYPE),
-    crosstalk::filter_select("SYMBOL", "Gene", variants_class5, ~SYMBOL)
+    crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_class5_1, ~CONSEQUENCE),
+    crosstalk::filter_checkbox("GENOTYPE", "Genotype", variants_class5_1, ~GENOTYPE),
+    crosstalk::filter_select("SYMBOL", "Gene", variants_class5_1, ~SYMBOL)
   ),
   list(
-    crosstalk::filter_select("CLINVAR_PHENOTYPE", "ClinVar phenotype(s)", variants_class5, ~CLINVAR_PHENOTYPE),
-    crosstalk::filter_slider(tag_gnomad, paste0("MAF gnomAD (",desc_gnomad,")"), variants_class5, formula_gnomad, sep="",ticks = F)
+    crosstalk::filter_select("CLINVAR_PHENOTYPE", "ClinVar phenotype(s)", variants_class5_1, ~CLINVAR_PHENOTYPE),
+    crosstalk::filter_slider("CLINVAR_REVIEW_STATUS_STARS", "ClinVar review status stars", variants_class5_1, ~CLINVAR_REVIEW_STATUS_STARS, min = 0, max = 4, step = 1, ticks = T),
+    crosstalk::filter_select("CLINVAR_CONFLICTED", "ClinVar conflicting interpretations", variants_class5_1, ~CLINVAR_CONFLICTED),
+    crosstalk::filter_slider(tag_gnomad, paste0("MAF gnomAD (",desc_gnomad,")"), variants_class5_1, formula_gnomad, sep="",ticks = F)
   )
 )
 
@@ -64,7 +75,7 @@ htmltools::br()
 htmltools::br()
 
 crosstalk::bscols(
-  DT::datatable(variants_class5, escape=F,extensions=c("Buttons","Responsive"), width = "100%",
+  DT::datatable(variants_class5_1, escape=F,extensions=c("Buttons","Responsive"), width = "100%",
                 options = list(
                   buttons = c('csv','excel'),
                   dom = 'Bfrtip',
@@ -82,34 +93,29 @@ crosstalk::bscols(
 
 <br><br>
 
-### <span style="color:#D53E4F">Class 4 - <b>Likely Pathogenic</b> variants</span>
+#### Non-ClinVar
 
-<br>
-
-*  A total of n = __`r tot_variants_p_clinvar[['class4']]`__ variants are recorded with a <i>Likely Pathogenic</i> clinical significance in ClinVar.
-*  A total of n = __`r tot_variants_p_other[['class4']]`__ <i><b>Other</b></i> variants (i.e. not registered in ClinVar) are classified with a <i>Likely Pathogenic</i> significance by CPSR (ACMG criteria - based on population frequency and variant effect).
-
-<br><br>
-
-
-```{r class4_cpsr, echo=F, results = 'asis', eval = show_class_filters[['class4']]}
+```{r class5_cpsr_other, echo=F, results = 'asis', eval = show_class_filters[['class5']][['Other']]}
 library(summarywidget)
 library(crosstalk)
 
 cat('\n')
 htmltools::br()
 
-variants_class4 <- crosstalk::SharedData$new(cps_report[['content']][['snv_indel']][['variant_display']][['class4']])
+
+variants_class5_other <- dplyr::filter(cps_report[['content']][['snv_indel']][['variant_display']][['class5']], SOURCE == 'Other') %>%
+  dplyr::select(-c(CLINVAR, CLINVAR_REVIEW_STATUS_STARS, CLINVAR_VARIANT_ORIGIN, CLINVAR_CLASSIFICATION, CLINVAR_CONFLICTED, CLINVAR_PHENOTYPE))
+variants_class5_2 <- crosstalk::SharedData$new(variants_class5_other)
 crosstalk::bscols(
   list(
-    crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_class4, ~CONSEQUENCE),
-    crosstalk::filter_checkbox("GENOTYPE", "Genotype", variants_class4, ~GENOTYPE),
-    crosstalk::filter_select("SYMBOL", "Gene", variants_class4, ~SYMBOL)
+    crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_class5_2, ~CONSEQUENCE),
+    crosstalk::filter_checkbox("GENOTYPE", "Genotype", variants_class5_2, ~GENOTYPE),
+    crosstalk::filter_select("SYMBOL", "Gene", variants_class5_2, ~SYMBOL)
   ),
   list(
-    crosstalk::filter_select("CLINVAR_PHENOTYPE", "ClinVar phenotype(s)", variants_class4, ~CLINVAR_PHENOTYPE),
-    crosstalk::filter_slider(tag_gnomad, paste0("MAF gnomAD (",desc_gnomad,")"), variants_class4, formula_gnomad, sep="",ticks = F)
-
+    crosstalk::filter_select("CPSR_CLASSIFICATION_CODE", "CPSR classification (ACMG criteria codes)", variants_class5_2, ~CPSR_CLASSIFICATION_CODE),
+    crosstalk::filter_slider("CPSR_CLASSIFICATION_SCORE", "CPSR pathogenicity score", variants_class5_2, ~CPSR_CLASSIFICATION_SCORE, step = 0.5, ticks = T),
+    crosstalk::filter_slider(tag_gnomad, paste0("MAF gnomAD (",desc_gnomad,")"), variants_class5_2, formula_gnomad, sep="",ticks = F)
   )
 )
 
@@ -119,7 +125,70 @@ htmltools::br()
 htmltools::br()
 
 crosstalk::bscols(
-  DT::datatable(variants_class4, escape=F,extensions=c("Buttons","Responsive"), width = "100%",
+  DT::datatable(variants_class5_2, escape=F,extensions=c("Buttons","Responsive"), width = "100%",
+                options = list(
+                  buttons = c('csv','excel'),
+                  dom = 'Bfrtip',
+                  initComplete = DT::JS(
+                      "function(settings, json) {",
+                      "$(this.api().table().header()).css({'background-color': '#9E0142', 'color': '#fff'});",
+                      "}")
+                )
+        )
+)
+#htmltools::br()
+
+```
+
+
+<br><br>
+
+
+
+### <span style="color:#D53E4F">Class 4 - <b>Likely Pathogenic</b> variants</span> {.tabset .tabset-pills .nav-justified}
+
+<br>
+
+
+
+*  A total of n = __`r tot_variants[['class4']][['ClinVar']]`__ variants are recorded with a <i>Likely Pathogenic</i> clinical significance in ClinVar.
+*  A total of n = __`r tot_variants[['class4']][['Other']]`__ <i><b>non-ClinVar</b></i> variants (i.e. not registered in ClinVar) are classified with a <i>Likely Pathogenic</i> significance by CPSR (ACMG criteria - based on population frequency and variant effect).
+
+<br><br>
+
+#### ClinVar
+
+```{r class4_cpsr_clinvar, echo=F, results = 'asis', eval = show_class_filters[['class4']][['ClinVar']]}
+library(summarywidget)
+library(crosstalk)
+
+cat('\n')
+htmltools::br()
+
+variants_class4_clinvar <- dplyr::filter(cps_report[['content']][['snv_indel']][['variant_display']][['class4']], SOURCE == 'ClinVar') %>%
+  dplyr::select(-c(CPSR_CLASSIFICATION,CPSR_CLASSIFICATION_SCORE,CPSR_CLASSIFICATION_DOC,CPSR_CLASSIFICATION_CODE))
+variants_class4_1 <- crosstalk::SharedData$new(variants_class4_clinvar)
+crosstalk::bscols(
+  list(
+    crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_class4_1, ~CONSEQUENCE),
+    crosstalk::filter_checkbox("GENOTYPE", "Genotype", variants_class4_1, ~GENOTYPE),
+    crosstalk::filter_select("SYMBOL", "Gene", variants_class4_1, ~SYMBOL)
+  ),
+  list(
+    crosstalk::filter_select("CLINVAR_PHENOTYPE", "ClinVar phenotype(s)", variants_class4_1, ~CLINVAR_PHENOTYPE),
+    crosstalk::filter_slider("CLINVAR_REVIEW_STATUS_STARS", "ClinVar review status stars", variants_class4_1, ~CLINVAR_REVIEW_STATUS_STARS, min = 0, max = 4, step = 1, ticks = T),
+    crosstalk::filter_select("CLINVAR_CONFLICTED", "ClinVar conflicting interpretations", variants_class4_1, ~CLINVAR_CONFLICTED),
+    crosstalk::filter_slider(tag_gnomad, paste0("MAF gnomAD (",desc_gnomad,")"), variants_class4_1, formula_gnomad, sep="",ticks = F)
+  )
+)
+
+    
+
+htmltools::br()
+htmltools::br()
+
+crosstalk::bscols(
+  DT::datatable(variants_class4_1, escape=F,extensions=c("Buttons","Responsive"), width = "100%",
                 options = list(
                   buttons = c('csv','excel'),
                   dom = 'Bfrtip',
@@ -131,171 +200,371 @@ crosstalk::bscols(
         )
 )
 
-#htmltools::br()
-
 ```
 <br><br>
 
-### <span style="color:#000000">Class 3 - <b>Variants of Uncertain Significance (VUS)</b></span>
+#### Non-Clinvar
 
-<br>
-
-*  A total of n = __`r tot_variants_p_clinvar[['class3']]`__ variants are recorded with a <i>VUS</i> clinical significance in ClinVar.
-*  A total of n = __`r tot_variants_p_other[['class3']]`__ <i><b>Other</b></i> variants (i.e. not registered in ClinVar) are classified with a <i>VUS</i> significance by CPSR (ACMG criteria - based on population frequency and variant effect).
-
-<br><br>
-
-
-```{r class3_cpsr, echo=F, results = 'asis', eval = show_class_filters[['class3']]}
+```{r class4_cpsr_other, echo=F, results = 'asis', eval = show_class_filters[['class4']][['Other']]}
 library(summarywidget)
 library(crosstalk)
 
 cat('\n')
 htmltools::br()
 
-variants_class3 <- crosstalk::SharedData$new(cps_report[['content']][['snv_indel']][['variant_display']][['class3']])
+
+variants_class4_other <- dplyr::filter(cps_report[['content']][['snv_indel']][['variant_display']][['class4']], SOURCE == 'Other') %>%
+  dplyr::select(-c(CLINVAR, CLINVAR_REVIEW_STATUS_STARS, CLINVAR_VARIANT_ORIGIN, CLINVAR_CLASSIFICATION, CLINVAR_CONFLICTED, CLINVAR_PHENOTYPE))
+variants_class4_2 <- crosstalk::SharedData$new(variants_class4_other)
 crosstalk::bscols(
   list(
-    crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_class3, ~CONSEQUENCE),
-    crosstalk::filter_checkbox("GENOTYPE", "Genotype", variants_class3, ~GENOTYPE),
-    crosstalk::filter_select("SYMBOL", "Gene", variants_class3, ~SYMBOL)
+    crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_class4_2, ~CONSEQUENCE),
+    crosstalk::filter_checkbox("GENOTYPE", "Genotype", variants_class4_2, ~GENOTYPE),
+    crosstalk::filter_select("SYMBOL", "Gene", variants_class4_2, ~SYMBOL)
   ),
   list(
-    crosstalk::filter_select("CLINVAR_PHENOTYPE", "ClinVar phenotype(s)", variants_class3, ~CLINVAR_PHENOTYPE),
-    crosstalk::filter_select("CLINVAR_CONFLICTED", "ClinVar conflicting interpretations", variants_class3, ~CLINVAR_CONFLICTED),
-    crosstalk::filter_slider(tag_gnomad, paste0("MAF gnomAD (",desc_gnomad,")"), variants_class3, formula_gnomad, sep="",ticks = F)
-
+    crosstalk::filter_select("CPSR_CLASSIFICATION_CODE", "CPSR classification (ACMG criteria codes)", variants_class4_2, ~CPSR_CLASSIFICATION_CODE),
+    crosstalk::filter_slider("CPSR_CLASSIFICATION_SCORE", "CPSR pathogenicity score", variants_class4_2, ~CPSR_CLASSIFICATION_SCORE, step = 0.5, ticks = T),
+    crosstalk::filter_slider(tag_gnomad, paste0("MAF gnomAD (",desc_gnomad,")"), variants_class4_2, formula_gnomad, sep="",ticks = F)
   )
 )
 
-    
+
 
 htmltools::br()
 htmltools::br()
 
 crosstalk::bscols(
-  DT::datatable(variants_class3, escape=F,extensions=c("Buttons","Responsive"), width = "100%",
+  DT::datatable(variants_class4_2, escape=F,extensions=c("Buttons","Responsive"), width = "100%",
                 options = list(
                   buttons = c('csv','excel'),
                   dom = 'Bfrtip',
                   initComplete = DT::JS(
-                      "function(settings, json) {",
-                      "$(this.api().table().header()).css({'background-color': 'black', 'color': '#fff'});",
-                      "}")
+                    "function(settings, json) {",
+                    "$(this.api().table().header()).css({'background-color': '#D53E4F', 'color': '#fff'});",
+                    "}")
                 )
-        )
+  )
 )
-
 #htmltools::br()
 
 ```
+
+
 <br><br>
 
-### <span style="color:#78C679">Class 2 - <b>Likely Benign</b> variants</span>
+### <span style="color:#000000">Class 3 - <b>Variants of Uncertain Significance (VUS)</b></span> {.tabset .tabset-pills .nav-justified}
 
 <br>
 
-*  A total of n = __`r tot_variants_p_clinvar[['class2']]`__ variants are recorded with a <i>Likely Benign</i> clinical significance in ClinVar.
-*  A total of n = __`r tot_variants_p_other[['class2']]`__ <i><b>Other</b></i> variants (i.e. not registered in ClinVar) are classified with a <i>Likely Benign</i> significance by CPSR (ACMG criteria - based on population frequency and variant effect).
+*  A total of n = __`r tot_variants[['class3']][['ClinVar']]`__ variants are recorded with a <i>VUS</i> clinical significance in ClinVar.
+*  A total of n = __`r tot_variants[['class3']][['Other']]`__ <i><b>non-ClinVar</b></i> variants (i.e. not registered in ClinVar) are classified with a <i>VUS</i> significance by CPSR (ACMG criteria - based on population frequency and variant effect).
 
-<br>
+<br><br>
 
+#### ClinVar
 
-```{r class2_cpsr, echo=F, results = 'asis', eval = show_class_filters[['class2']]}
+```{r class3_cpsr_clinvar, echo=F, results = 'asis', eval = show_class_filters[['class3']][['ClinVar']]}
 library(summarywidget)
 library(crosstalk)
 
 cat('\n')
 htmltools::br()
 
-variants_class2 <- crosstalk::SharedData$new(cps_report[['content']][['snv_indel']][['variant_display']][['class2']])
+variants_class3_clinvar <- dplyr::filter(cps_report[['content']][['snv_indel']][['variant_display']][['class3']], SOURCE == 'ClinVar') %>%
+  dplyr::select(-c(CPSR_CLASSIFICATION,CPSR_CLASSIFICATION_SCORE,CPSR_CLASSIFICATION_DOC,CPSR_CLASSIFICATION_CODE))
+variants_class3_1 <- crosstalk::SharedData$new(variants_class3_clinvar)
 crosstalk::bscols(
   list(
-    crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_class2, ~CONSEQUENCE),
-    crosstalk::filter_checkbox("GENOTYPE", "Genotype", variants_class2, ~GENOTYPE),
-    crosstalk::filter_select("SYMBOL", "Gene", variants_class2, ~SYMBOL)
+    crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_class3_1, ~CONSEQUENCE),
+    crosstalk::filter_checkbox("GENOTYPE", "Genotype", variants_class3_1, ~GENOTYPE),
+    crosstalk::filter_select("SYMBOL", "Gene", variants_class3_1, ~SYMBOL)
   ),
   list(
-    crosstalk::filter_select("CLINVAR_PHENOTYPE", "ClinVar phenotype(s)", variants_class2, ~CLINVAR_PHENOTYPE),
-    crosstalk::filter_slider(tag_gnomad, paste0("MAF gnomAD (",desc_gnomad,")"), variants_class2, formula_gnomad, sep="",ticks = F)
-
+    crosstalk::filter_select("CLINVAR_PHENOTYPE", "ClinVar phenotype(s)", variants_class3_1, ~CLINVAR_PHENOTYPE),
+    crosstalk::filter_slider("CLINVAR_REVIEW_STATUS_STARS", "ClinVar review status stars", variants_class3_1, ~CLINVAR_REVIEW_STATUS_STARS, min = 0, max = 4, step = 1, ticks = T),
+    crosstalk::filter_select("CLINVAR_CONFLICTED", "ClinVar conflicting interpretations", variants_class3_1, ~CLINVAR_CONFLICTED),
+    crosstalk::filter_slider(tag_gnomad, paste0("MAF gnomAD (",desc_gnomad,")"), variants_class3_1, formula_gnomad, sep="",ticks = F)
   )
 )
 
-    
+
 
 htmltools::br()
 htmltools::br()
 
 crosstalk::bscols(
-  DT::datatable(variants_class2, escape=F,extensions=c("Buttons","Responsive"), width = "100%",
+  DT::datatable(variants_class3_1, escape=F,extensions=c("Buttons","Responsive"), width = "100%",
                 options = list(
                   buttons = c('csv','excel'),
                   dom = 'Bfrtip',
                   initComplete = DT::JS(
-                      "function(settings, json) {",
-                      "$(this.api().table().header()).css({'background-color': '#78C679', 'color': '#fff'});",
-                      "}")
+                    "function(settings, json) {",
+                    "$(this.api().table().header()).css({'background-color': '#000000', 'color': '#fff'});",
+                    "}")
                 )
-        )
+  )
 )
-
-#htmltools::br()
 
 ```
 <br><br>
 
-### <span style="color:#077009">Class 1 - <b>Benign</b> variants</span>
+#### Non-Clinvar
 
-<br>
-
-*  A total of n = __`r tot_variants_p_clinvar[['class1']]`__ variants are recorded with a <i>Benign</i> clinical significance in ClinVar.
-*  A total of n = __`r tot_variants_p_other[['class1']]`__ <i><b>Other</b></i> variants (i.e. not registered in ClinVar) are classified with a <i>Benign</i> significance by CPSR (ACMG criteria - based on population frequency and variant effect).
-
-<br><br>
-
-
-```{r class1_cpsr, echo=F, results = 'asis', eval = show_class_filters[['class1']]}
+```{r class3_cpsr_other, echo=F, results = 'asis', eval = show_class_filters[['class3']][['Other']]}
 library(summarywidget)
 library(crosstalk)
 
 cat('\n')
 htmltools::br()
 
-variants_class1 <- crosstalk::SharedData$new(cps_report[['content']][['snv_indel']][['variant_display']][['class1']])
+
+variants_class3_other <- dplyr::filter(cps_report[['content']][['snv_indel']][['variant_display']][['class3']], SOURCE == 'Other') %>%
+  dplyr::select(-c(CLINVAR, CLINVAR_REVIEW_STATUS_STARS, CLINVAR_VARIANT_ORIGIN, CLINVAR_CLASSIFICATION, CLINVAR_CONFLICTED, CLINVAR_PHENOTYPE))
+variants_class3_2 <- crosstalk::SharedData$new(variants_class3_other)
 crosstalk::bscols(
   list(
-    crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_class1, ~CONSEQUENCE),
-    crosstalk::filter_checkbox("GENOTYPE", "Genotype", variants_class1, ~GENOTYPE),
-    crosstalk::filter_select("SYMBOL", "Gene", variants_class1, ~SYMBOL)
+    crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_class3_2, ~CONSEQUENCE),
+    crosstalk::filter_checkbox("GENOTYPE", "Genotype", variants_class3_2, ~GENOTYPE),
+    crosstalk::filter_select("SYMBOL", "Gene", variants_class3_2, ~SYMBOL)
   ),
   list(
-    crosstalk::filter_select("CLINVAR_PHENOTYPE", "ClinVar phenotype(s)", variants_class1, ~CLINVAR_PHENOTYPE),
-    crosstalk::filter_slider(tag_gnomad, paste0("MAF gnomAD (",desc_gnomad,")"), variants_class1, formula_gnomad, sep="",ticks = F)
-
+    crosstalk::filter_select("CPSR_CLASSIFICATION_CODE", "CPSR classification (ACMG criteria codes)", variants_class3_2, ~CPSR_CLASSIFICATION_CODE),
+    crosstalk::filter_slider("CPSR_CLASSIFICATION_SCORE", "CPSR pathogenicity score", variants_class3_2, ~CPSR_CLASSIFICATION_SCORE, step = 0.5, ticks = T),
+    crosstalk::filter_slider(tag_gnomad, paste0("MAF gnomAD (",desc_gnomad,")"), variants_class3_2, formula_gnomad, sep="",ticks = F)
   )
 )
 
-    
+
 
 htmltools::br()
 htmltools::br()
 
 crosstalk::bscols(
-  DT::datatable(variants_class1, escape=F,extensions=c("Buttons","Responsive"), width = "100%",
+  DT::datatable(variants_class3_2, escape=F,extensions=c("Buttons","Responsive"), width = "100%",
                 options = list(
                   buttons = c('csv','excel'),
                   dom = 'Bfrtip',
                   initComplete = DT::JS(
-                      "function(settings, json) {",
-                      "$(this.api().table().header()).css({'background-color': '#077009', 'color': '#fff'});",
-                      "}")
+                    "function(settings, json) {",
+                    "$(this.api().table().header()).css({'background-color': '#000000', 'color': '#fff'});",
+                    "}")
                 )
-        )
+  )
 )
-
 #htmltools::br()
 
 ```
 
+<br><br>
+
+### <span style="color:#78C679">Class 2 - <b>Likely Benign</b> variants</span> {.tabset .tabset-pills .nav-justified}
+
+<br>
+
+*  A total of n = __`r tot_variants[['class2']][['ClinVar']]`__ variants are recorded with a <i>Likely Benign</i> clinical significance in ClinVar.
+*  A total of n = __`r tot_variants[['class2']][['Other']]`__ <i><b>Other</b></i> variants (i.e. not registered in ClinVar) are classified with a <i>Likely Benign</i> significance by CPSR (ACMG criteria - based on population frequency and variant effect).
+
+<br>
+
+#### ClinVar
+
+```{r class2_cpsr_clinvar, echo=F, results = 'asis', eval = show_class_filters[['class2']][['ClinVar']]}
+library(summarywidget)
+library(crosstalk)
+
+cat('\n')
+htmltools::br()
+
+variants_class2_clinvar <- dplyr::filter(cps_report[['content']][['snv_indel']][['variant_display']][['class2']], SOURCE == 'ClinVar') %>%
+  dplyr::select(-c(CPSR_CLASSIFICATION,CPSR_CLASSIFICATION_SCORE,CPSR_CLASSIFICATION_DOC,CPSR_CLASSIFICATION_CODE))
+variants_class2_1 <- crosstalk::SharedData$new(variants_class2_clinvar)
+crosstalk::bscols(
+  list(
+    crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_class2_1, ~CONSEQUENCE),
+    crosstalk::filter_checkbox("GENOTYPE", "Genotype", variants_class2_1, ~GENOTYPE),
+    crosstalk::filter_select("SYMBOL", "Gene", variants_class2_1, ~SYMBOL)
+  ),
+  list(
+    crosstalk::filter_select("CLINVAR_PHENOTYPE", "ClinVar phenotype(s)", variants_class2_1, ~CLINVAR_PHENOTYPE),
+    crosstalk::filter_slider("CLINVAR_REVIEW_STATUS_STARS", "ClinVar review status stars", variants_class2_1, ~CLINVAR_REVIEW_STATUS_STARS, min = 0, max = 4, step = 1, ticks = T),
+    crosstalk::filter_select("CLINVAR_CONFLICTED", "ClinVar conflicting interpretations", variants_class2_1, ~CLINVAR_CONFLICTED),
+    crosstalk::filter_slider(tag_gnomad, paste0("MAF gnomAD (",desc_gnomad,")"), variants_class2_1, formula_gnomad, sep="",ticks = F)
+  )
+)
+
+
+
+htmltools::br()
+htmltools::br()
+
+crosstalk::bscols(
+  DT::datatable(variants_class2_1, escape=F,extensions=c("Buttons","Responsive"), width = "100%",
+                options = list(
+                  buttons = c('csv','excel'),
+                  dom = 'Bfrtip',
+                  initComplete = DT::JS(
+                    "function(settings, json) {",
+                    "$(this.api().table().header()).css({'background-color': '#78C679', 'color': '#fff'});",
+                    "}")
+                )
+  )
+)
+
+```
+<br><br>
+
+#### Non-Clinvar
+
+```{r class2_cpsr_other, echo=F, results = 'asis', eval = show_class_filters[['class2']][['Other']]}
+library(summarywidget)
+library(crosstalk)
+
+cat('\n')
+htmltools::br()
+
+
+variants_class2_other <- dplyr::filter(cps_report[['content']][['snv_indel']][['variant_display']][['class2']], SOURCE == 'Other') %>%
+  dplyr::select(-c(CLINVAR, CLINVAR_REVIEW_STATUS_STARS, CLINVAR_VARIANT_ORIGIN, CLINVAR_CLASSIFICATION, CLINVAR_CONFLICTED, CLINVAR_PHENOTYPE))
+variants_class2_2 <- crosstalk::SharedData$new(variants_class2_other)
+crosstalk::bscols(
+  list(
+    crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_class2_2, ~CONSEQUENCE),
+    crosstalk::filter_checkbox("GENOTYPE", "Genotype", variants_class2_2, ~GENOTYPE),
+    crosstalk::filter_select("SYMBOL", "Gene", variants_class2_2, ~SYMBOL)
+  ),
+  list(
+    crosstalk::filter_select("CPSR_CLASSIFICATION_CODE", "CPSR classification (ACMG criteria codes)", variants_class2_2, ~CPSR_CLASSIFICATION_CODE),
+    crosstalk::filter_slider("CPSR_CLASSIFICATION_SCORE", "CPSR pathogenicity score", variants_class2_2, ~CPSR_CLASSIFICATION_SCORE, step = 0.5, ticks = T),
+    crosstalk::filter_slider(tag_gnomad, paste0("MAF gnomAD (",desc_gnomad,")"), variants_class2_2, formula_gnomad, sep="",ticks = F)
+  )
+)
+
+
+
+htmltools::br()
+htmltools::br()
+
+crosstalk::bscols(
+  DT::datatable(variants_class2_2, escape=F,extensions=c("Buttons","Responsive"), width = "100%",
+                options = list(
+                  buttons = c('csv','excel'),
+                  dom = 'Bfrtip',
+                  initComplete = DT::JS(
+                    "function(settings, json) {",
+                    "$(this.api().table().header()).css({'background-color': '#78C679', 'color': '#fff'});",
+                    "}")
+                )
+  )
+)
+#htmltools::br()
+
+```
+
+<br><br>
+
+### <span style="color:#077009">Class 1 - <b>Benign</b> variants</span> {.tabset .tabset-pills .nav-justified}
+
+<br>
+
+*  A total of n = __`r tot_variants[['class1']][['ClinVar']]`__ variants are recorded with a <i>Benign</i> clinical significance in ClinVar.
+*  A total of n = __`r tot_variants[['class1']][['Other']]`__ <i><b>Other</b></i> variants (i.e. not registered in ClinVar) are classified with a <i>Benign</i> significance by CPSR (ACMG criteria - based on population frequency and variant effect).
+
+<br><br>
+
+#### ClinVar
+
+```{r class1_cpsr_clinvar, echo=F, results = 'asis', eval = show_class_filters[['class1']][['ClinVar']]}
+library(summarywidget)
+library(crosstalk)
+
+cat('\n')
+htmltools::br()
+
+variants_class1_clinvar <- dplyr::filter(cps_report[['content']][['snv_indel']][['variant_display']][['class1']], SOURCE == 'ClinVar') %>%
+  dplyr::select(-c(CPSR_CLASSIFICATION,CPSR_CLASSIFICATION_SCORE,CPSR_CLASSIFICATION_DOC,CPSR_CLASSIFICATION_CODE))
+variants_class1_1 <- crosstalk::SharedData$new(variants_class1_clinvar)
+crosstalk::bscols(
+  list(
+    crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_class1_1, ~CONSEQUENCE),
+    crosstalk::filter_checkbox("GENOTYPE", "Genotype", variants_class1_1, ~GENOTYPE),
+    crosstalk::filter_select("SYMBOL", "Gene", variants_class1_1, ~SYMBOL)
+  ),
+  list(
+    crosstalk::filter_select("CLINVAR_PHENOTYPE", "ClinVar phenotype(s)", variants_class1_1, ~CLINVAR_PHENOTYPE),
+    crosstalk::filter_slider("CLINVAR_REVIEW_STATUS_STARS", "ClinVar review status stars", variants_class1_1, ~CLINVAR_REVIEW_STATUS_STARS, min = 0, max = 4, step = 1, ticks = T),
+    crosstalk::filter_select("CLINVAR_CONFLICTED", "ClinVar conflicting interpretations", variants_class1_1, ~CLINVAR_CONFLICTED),
+    crosstalk::filter_slider(tag_gnomad, paste0("MAF gnomAD (",desc_gnomad,")"), variants_class1_1, formula_gnomad, sep="",ticks = F)
+  )
+)
+
+
+
+htmltools::br()
+htmltools::br()
+
+crosstalk::bscols(
+  DT::datatable(variants_class1_1, escape=F,extensions=c("Buttons","Responsive"), width = "100%",
+                options = list(
+                  buttons = c('csv','excel'),
+                  dom = 'Bfrtip',
+                  initComplete = DT::JS(
+                    "function(settings, json) {",
+                    "$(this.api().table().header()).css({'background-color': '#077009', 'color': '#fff'});",
+                    "}")
+                )
+  )
+)
+
+```
+<br><br>
+
+#### Non-Clinvar
+
+```{r class1_cpsr_other, echo=F, results = 'asis', eval = show_class_filters[['class1']][['Other']]}
+library(summarywidget)
+library(crosstalk)
+
+cat('\n')
+htmltools::br()
+
+
+variants_class1_other <- dplyr::filter(cps_report[['content']][['snv_indel']][['variant_display']][['class1']], SOURCE == 'Other') %>%
+  dplyr::select(-c(CLINVAR, CLINVAR_REVIEW_STATUS_STARS, CLINVAR_VARIANT_ORIGIN, CLINVAR_CLASSIFICATION, CLINVAR_CONFLICTED, CLINVAR_PHENOTYPE))
+variants_class1_2 <- crosstalk::SharedData$new(variants_class1_other)
+crosstalk::bscols(
+  list(
+    crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_class1_2, ~CONSEQUENCE),
+    crosstalk::filter_checkbox("GENOTYPE", "Genotype", variants_class1_2, ~GENOTYPE),
+    crosstalk::filter_select("SYMBOL", "Gene", variants_class1_2, ~SYMBOL)
+  ),
+  list(
+    crosstalk::filter_select("CPSR_CLASSIFICATION_CODE", "CPSR classification (ACMG criteria codes)", variants_class1_2, ~CPSR_CLASSIFICATION_CODE),
+    crosstalk::filter_slider("CPSR_CLASSIFICATION_SCORE", "CPSR pathogenicity score", variants_class1_2, ~CPSR_CLASSIFICATION_SCORE, step = 0.5, ticks = T),
+    crosstalk::filter_slider(tag_gnomad, paste0("MAF gnomAD (",desc_gnomad,")"), variants_class1_2, formula_gnomad, sep="",ticks = F)
+  )
+)
+
+
+
+htmltools::br()
+htmltools::br()
+
+crosstalk::bscols(
+  DT::datatable(variants_class1_2, escape=F,extensions=c("Buttons","Responsive"), width = "100%",
+                options = list(
+                  buttons = c('csv','excel'),
+                  dom = 'Bfrtip',
+                  initComplete = DT::JS(
+                    "function(settings, json) {",
+                    "$(this.api().table().header()).css({'background-color': '#077009', 'color': '#fff'});",
+                    "}")
+                )
+  )
+)
+#htmltools::br()
+
+```
+
+<br><br>
 
